--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Comunic4te</title>
+	<link rel="stylesheet" href="css/normalize.css" />
 	<link rel="stylesheet" href="css/comunic4te.css" />
 </head>
 <body>
 	<header id="header" class="">
-		<div class="logo">
+		<div class="logo left">
 			<img src="imagenes/logo.png" alt="Comunic4te" />
 		</div>
 		<div class="titular">
